--- a/menu/index.html
+++ b/menu/index.html
@@ -360,5 +360,154 @@
             <tr><td>Chicken Spring Roll</td><td class="price">99</td></tr>
         </table>
     </div>
+    <!-- Indian Main Course Section -->
+    <div class="menu-section">
+        <h2 class="section-title">Indian Main Course (Veg)</h2>
+        <table>
+            <tr>
+                <th>Item</th>
+                <th>Price (₹)</th>
+            </tr>
+            <tr><td>Kadai Veg</td><td class="price">149</td></tr>
+            <tr><td>Mix Veg</td><td class="price">149</td></tr>
+            <tr><td>Mushroom Matar</td><td class="price">220</td></tr>
+            <tr><td>Veg Malai Kofta</td><td class="price">249</td></tr>
+            <tr><td>Khumb Malai Kofta</td><td class="price">249</td></tr>
+            <tr><td>Mushroom Do – Piyaza</td><td class="price">249</td></tr>
+            <tr><td>Paneer Masala</td><td class="price">230</td></tr>
+            <tr><td>Kadai Paneer</td><td class="price">239</td></tr>
+            <tr><td>Mushroom Masala</td><td class="price">240</td></tr>
+            <tr><td>Kadai Mushroom</td><td class="price">249</td></tr>
+            <tr><td>Paneer Khurchan</td><td class="price">280</td></tr>
+            <tr><td>Paneer - Do - Pyaza</td><td class="price">280</td></tr>
+            <tr><td>Paneer Lababdar</td><td class="price">280</td></tr>
+            <tr><td>Paneer Butter Masala</td><td class="price">279</td></tr>
+            <tr><td>Shahi Paneer</td><td class="price">290</td></tr>
+            <tr><td>Paneer Malai Kofta</td><td class="price">270</td></tr>
+            <tr><td>Paneer Pasanda</td><td class="price">270</td></tr>
+            <tr><td>Palak Paneer</td><td class="price">250</td></tr>
+            <tr><td>Paneer Tikka Masala</td><td class="price">250</td></tr>
+            <tr><td>Paneer Tikka Butter Masala</td><td class="price">270</td></tr>
+            <tr><td>Matar Paneer</td><td class="price">239</td></tr>
+        </table>
+
+        <h2 class="section-title">Indian Main Course (Non-Veg)</h2>
+        <table>
+            <tr>
+                <th>Item</th>
+                <th>Quantity</th>
+                <th>Price (₹)</th>
+            </tr>
+            <tr><td>Champaran Chicken Handi</td><td class="quantity">4 Pcs</td><td class="price">250</td></tr>
+            <tr><td>Champaran Mutton Handi</td><td class="quantity">4 Pcs</td><td class="price">290</td></tr>
+            <tr><td>Kadai Chicken</td><td class="quantity">4 Pcs</td><td class="price">220</td></tr>
+            <tr><td>Butter Chicken</td><td class="quantity">4 Pcs</td><td class="price">250</td></tr>
+            <tr><td>Chicken Tikka Lababdar</td><td class="quantity">4 Pcs</td><td class="price">220</td></tr>
+            <tr><td>Chicken Masala</td><td class="quantity">4 Pcs</td><td class="price">210</td></tr>
+            <tr><td>Chicken Tikka Masala</td><td class="quantity">4 Pcs</td><td class="price">220</td></tr>
+            <tr><td>Chicken Do – Pyaza</td><td class="quantity">4 Pcs</td><td class="price">240</td></tr>
+            <tr><td>Chicken Rogan Josh</td><td class="quantity">4 Pcs</td><td class="price">260</td></tr>
+            <tr><td>Dehati Murg</td><td class="quantity">4 Pcs</td><td class="price">280</td></tr>
+            <tr><td>Chicken Curry</td><td class="quantity">4 Pcs</td><td class="price">280</td></tr>
+            <tr><td>Murgh Masalam</td><td class="quantity">Full Chicken</td><td class="price">580</td></tr>
+            <tr><td>Murgh Mughlai</td><td class="quantity">4 Pcs</td><td class="price">240</td></tr>
+            <tr><td>Murgh Rezala</td><td class="quantity">4 Pcs</td><td class="price">240</td></tr>
+            <tr><td>Murgh Akbari Masala</td><td class="quantity">4 Pcs</td><td class="price">280</td></tr>
+            <tr><td>Murgh Afghani Curry</td><td class="quantity">4 Pcs</td><td class="price">280</td></tr>
+            <tr><td>Mutton Rogan Josh</td><td class="quantity">2 Pcs</td><td class="price">240</td></tr>
+            <tr><td>Mutton Masala</td><td class="quantity">2 Pcs</td><td class="price">290</td></tr>
+            <tr><td>Mutton Bhuna</td><td class="quantity">2 Pcs</td><td class="price">270</td></tr>
+            <tr><td>Rara Gosht</td><td class="quantity">2 Pcs</td><td class="price">270</td></tr>
+            <tr><td>Fish Rohu Curry</td><td class="quantity">2 Pcs</td><td class="price">130</td></tr>
+            <tr><td>Egg Curry</td><td class="quantity">2 Pcs</td><td class="price">160</td></tr>
+            <tr><td>Egg Masala</td><td class="quantity">2 Pcs</td><td class="price">180</td></tr>
+            <tr><td>Egg Do – Piyaza</td><td class="quantity">2 Pcs</td><td class="price">220</td></tr>
+        </table>
+    </div>
+
+    <!-- Dal/Tadka Section -->
+    <div class="menu-section">
+        <h2 class="section-title">Dal / Tadka</h2>
+        <table>
+            <tr>
+                <th>Item</th>
+                <th>Price (₹)</th>
+            </tr>
+            <tr><td>Yellow Dal Fry</td><td class="price">140</td></tr>
+            <tr><td>Butter Dal Fry</td><td class="price">149</td></tr>
+            <tr><td>Yellow Dal Tadka</td><td class="price">149</td></tr>
+            <tr><td>Dal Makhani</td><td class="price">170</td></tr>
+            <tr><td>Egg Dal</td><td class="price">180</td></tr>
+        </table>
+    </div>
+
+    <!-- Rice Section -->
+    <div class="menu-section">
+        <h2 class="section-title">Basmati Ka Khazana</h2>
+        <table>
+            <tr>
+                <th>Item</th>
+                <th>Price (₹)</th>
+            </tr>
+            <tr><td>Steamed Rice</td><td class="price">90</td></tr>
+            <tr><td>Jeera Rice</td><td class="price">110</td></tr>
+            <tr><td>Lemon Rice</td><td class="price">110</td></tr>
+            <tr><td>Ghee Rice</td><td class="price">130</td></tr>
+            <tr><td>Veg Pulao</td><td class="price">149</td></tr>
+            <tr><td>Green Peas Pulao</td><td class="price">149</td></tr>
+            <tr><td>Navratan Pulao</td><td class="price">139</td></tr>
+            <tr><td>Saffron Pulao</td><td class="price">159</td></tr>
+        </table>
+    </div>
+
+    <!-- Biryani Section -->
+    <div class="menu-section">
+        <h2 class="section-title">Biryani</h2>
+        <table>
+            <tr>
+                <th>Item</th>
+                <th>Price (₹)</th>
+            </tr>
+            <tr><td>Veg Dum Biryani</td><td class="price">159</td></tr>
+            <tr><td>Handi Veg Dum Biryani</td><td class="price">179</td></tr>
+            <tr><td>Hyderabadi Chicken Biryani</td><td class="price">249</td></tr>
+            <tr><td>Handi Hyderabadi Chicken Biryani</td><td class="price">279</td></tr>
+            <tr><td>Paneer Dum Biryani</td><td class="price">179</td></tr>
+            <tr><td>Mutton Dum Biryani</td><td class="price">299</td></tr>
+            <tr><td>Egg Biryani</td><td class="price">149</td></tr>
+            <tr><td>Handi Mutton Dum Biryani</td><td class="price">349</td></tr>
+        </table>
+    </div>
+
+    <!-- Bread Section -->
+    <div class="menu-section">
+        <h2 class="section-title">Bread Basket</h2>
+        <table>
+            <tr>
+                <th>Item</th>
+                <th>Price (₹)</th>
+            </tr>
+            <tr><td>Tawa Roti (Butter / Plain)</td><td class="price">15 / 10</td></tr>
+            <tr><td>Tandoor Roti (Butter / Plain)</td><td class="price">15 / 10</td></tr>
+            <tr><td>Butter Naan</td><td class="price">39</td></tr>
+            <tr><td>Laccha Paratha</td><td class="price">59</td></tr>
+            <tr><td>Plain Kulcha</td><td class="price">59</td></tr>
+            <tr><td>Masala Kulcha</td><td class="price">69</td></tr>
+            <tr><td>Paneer Kulcha</td><td class="price">110</td></tr>
+            <tr><td>Plain Naan</td><td class="price">59</td></tr>
+            <tr><td>Garlic Naan</td><td class="price">79</td></tr>
+            <tr><td>Cheese Naan</td><td class="price">99</td></tr>
+            <tr><td>Keema Naan (Chicken)</td><td class="price">99</td></tr>
+            <tr><td>Missi Roti</td><td class="price">49</td></tr>
+            <tr><td>Bread Basket (5 Rotis)</td><td class="price">220</td></tr>
+            <tr><td>Methi Paratha</td><td class="price">69</td></tr>
+            <tr><td>Aloo Tandoori Paratha</td><td class="price">49</td></tr>
+            <tr><td>Gobi Paratha</td><td class="price">69</td></tr>
+            <tr><td>Sattu Paratha</td><td class="price">49</td></tr>
+            <tr><td>Pudina Paratha</td><td class="price">49</td></tr>
+            <tr><td>Paneer Paratha</td><td class="price">79</td></tr>
+            <tr><td>Chicken Keema Paratha</td><td class="price">69</td></tr>
+        </table>
+    </div>
 </body>
 </html>
