--- a/menu/index.html
+++ b/menu/index.html
@@ -509,5 +509,94 @@
             <tr><td>Chicken Keema Paratha</td><td class="price">69</td></tr>
         </table>
     </div>
+        <!-- Raita Section -->
+    <div class="menu-section">
+        <h2 class="section-title">Raita</h2>
+        <table>
+            <tr>
+                <th>Item</th>
+                <th>Price (₹)</th>
+            </tr>
+            <tr><td>Mix Raita</td><td class="price">99</td></tr>
+            <tr><td>Boondi Raita</td><td class="price">99</td></tr>
+            <tr><td>Onion Raita</td><td class="price">89</td></tr>
+            <tr><td>Cucumber Raita</td><td class="price">89</td></tr>
+        </table>
+    </div>
+
+    <!-- Beverages Section -->
+    <div class="menu-section">
+        <h2 class="section-title">Beverages</h2>
+        
+        <div class="subsection-title">Tea & Coffee</div>
+        <div class="price-note">@ Under Rs 89/-</div>
+        <table>
+            <tr>
+                <th>Item</th>
+                <th>Price (₹)</th>
+            </tr>
+            <tr><td>Tea</td><td class="price">20</td></tr>
+            <tr><td>Classic Black Tea</td><td class="price">20</td></tr>
+            <tr><td>Green Tea</td><td class="price">29</td></tr>
+            <tr><td>Masala Tea</td><td class="price">29</td></tr>
+            <tr><td>Coffee</td><td class="price">29</td></tr>
+            <tr><td>Cold Coffee</td><td class="price">69</td></tr>
+            <tr><td>Hot Chocolate</td><td class="price">69</td></tr>
+        </table>
+
+        <div class="subsection-title">Cold Beverages</div>
+        <table>
+            <tr>
+                <th>Item</th>
+                <th>Price (₹)</th>
+            </tr>
+            <tr><td>Fresh Lime Soda</td><td class="price">39</td></tr>
+            <tr><td>Lemonade</td><td class="price">39</td></tr>
+            <tr><td>Lassi (Sweet / Salted / Mix)</td><td class="price">49</td></tr>
+            <tr><td>Curd with Sugar / Salt</td><td class="price">49</td></tr>
+            <tr><td>Buttermilk (Plain / Masala)</td><td class="price">49</td></tr>
+            <tr><td>Cold Drinks</td><td class="price">39</td></tr>
+            <tr><td>Masala Cold Drink</td><td class="price">49</td></tr>
+            <tr><td>Virgin Mojito</td><td class="price">49</td></tr>
+            <tr><td>Green Apple Mojito</td><td class="price">49</td></tr>
+            <tr><td>Blue Lagoon</td><td class="price">59</td></tr>
+            <tr><td>Milk Shake</td><td class="price">59</td></tr>
+            <tr><td>Vanilla Shake</td><td class="price">79</td></tr>
+            <tr><td>Strawberry Shake</td><td class="price">79</td></tr>
+            <tr><td>Butterscotch Shake</td><td class="price">79</td></tr>
+            <tr><td>Chocolate Shake</td><td class="price">59</td></tr>
+            <tr><td>Oreo Shake</td><td class="price">79</td></tr>
+            <tr><td>Mango Shake</td><td class="price">79</td></tr>
+            <tr><td>Pineapple Shake</td><td class="price">79</td></tr>
+            <tr><td>Mix Fruit Shake</td><td class="price">79</td></tr>
+        </table>
+    </div>
+
+    <!-- Desserts Section -->
+    <div class="menu-section">
+        <h2 class="section-title">Delicious Desserts</h2>
+        <table>
+            <tr>
+                <th>Item</th>
+                <th>Quantity</th>
+                <th>Price (₹)</th>
+            </tr>
+            <tr>
+                <td>Gulab Jamun</td>
+                <td class="quantity">2 Pcs</td>
+                <td class="price">40</td>
+            </tr>
+            <tr>
+                <td>Rasgulla with Dahi</td>
+                <td class="quantity">1 Pcs</td>
+                <td class="price">30</td>
+            </tr>
+            <tr>
+                <td>Ice Cream (Vanilla / Butterscotch)</td>
+                <td class="quantity">-</td>
+                <td class="price">49</td>
+            </tr>
+        </table>
+    </div>
 </body>
 </html>
